# Open-Tool-Learning

./: .gitignore  MANIFEST.in  README.md  inference.py  inference.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: doc.yaml  publish.yaml
asset/: logo.pptx
data/: dataset.md
docs/: index.md
docs/API/: API.md
src/: _agent.py  _tool.py  embedder_test.py  inference.sh  test.py
src/llm/: ChatGLM.py  ChatGPT.py  MOSS.py  Qwen.py  __init__.py
src/otl/: __init__.py  _agent.py  _chat.py  _embedding.py  _model.py  _retrieval.py  _tool.py  _vectorstore.py  inference.py
src/otl/agents/: __init__.py  agent.py
src/otl/chat/: _prototype.py  chat_management.py
src/otl/data/: draft.py  general_dataset.py
src/otl/data/dataset/: API_Bank.py  SoAy.py  ToolTalk.py  draft.py
src/otl/embedding/: __init__.py  embedder.py
src/otl/evaluation/: eval.py
src/otl/llm/: LLaMA.py
src/otl/model/: _prototype.py
src/otl/model/llm/: Chatgpt.py  LLaMA.py  __init__.py
src/otl/model/llm/old_format/: Baichuan.py  InternLM.py  LLaMA_LoRA.py
src/otl/process/: process_response.py
src/otl/prompt/: __init__.py  manager.py  tool.py
src/otl/retrieval/: _prototype.py  embedder.py  retriever.py
src/otl/tool/: _prototype.py  tool_calling.py  tool_pool.py
src/otl/utils/: __init__.py  _log.py  random.py
src/otl/vectorstore/: __init__.py  _prototype.py  store.py  torch_tensor_store.py
src/toolagent/: __init__.py  _exception.py  _version.py  config.py
src/toolagent/agents/: _prototype.py  agent.py
src/toolagent/chat/: __init__.py  chat_management.py
src/toolagent/data/: general_dataset.py  one_data.py
src/toolagent/data/dataset/: API_Bank.py  SoAy.py  ToolEyes.py  ToolTalk.py
src/toolagent/discard/: _version.py
src/toolagent/embedding/: __init__.py  embedder.py
src/toolagent/evaluation/: eval.py
src/toolagent/model/llm/: LLaMA.py
src/toolagent/model/llm/old_format/: CPM_Bee.py  ChatYuan.py
src/toolagent/process/: load_excutable_tool.py  process_dataset.py  process_response.py  process_tool_info.py  utils.py
src/toolagent/prompt/: tool.py
src/toolagent/retrieval/: retriever.py
src/toolagent/tool/: __init__.py  _prototype.py  tool.py  tool_calling.py  tool_pool.py
src/toolagent/utils/: __init__.py  file_io.py
src/toolagent/vectorstore/: __init__.py  store.py
src/utils/: __init__.py
tests/: embedder_test.py  test.py
