[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "toolagent"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mengsong Wu", email = "radi.cat@qq.com" },
]
maintainers = [
    { name = "Mengsong Wu", email = "radi.cat@qq.com" },
    { name = "Xiang Zhang" },
    { name = "Han Han"},
]
dependencies = [
    "setuptools",
    "wheel",
    "torch",
    "transformers",
    "openai",
    "peft",
]

[tool.setuptools_scm]
version_file = "src/toolagent/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["toolagent"]

[project.urls]
"Homepage" = "https://github.com/fairyshine/Open-Tool-Learning"
"Bug Tracker" = "https://github.com/fairyshine/Open-Tool-Learning/issues"
"Source" = "https://github.com/fairyshine/Open-Tool-Learning/"